# socketConnections

./: CMakeLists.txt  README.md  resources.txt  sockConn.pc.in
demo/: client.cpp  serial.cpp  server.cpp
examples/: serial.cpp  server.cpp
include/: sockConn.h  socketConnections.h
src/: client.cpp  serializer.cpp  server.cpp
